--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,28 +5,101 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
+    signingConfigs {
+        debug {
+            keyAlias 'gradle'
+            keyPassword 'gradle'
+            storeFile file('../apk/gradle.jks')
+            storePassword 'gradle'
+        }
+        release {
+            keyAlias 'gradle'
+            keyPassword 'gradle'
+            storeFile file('../apk/gradle.jks')
+            storePassword 'gradle'
+        }
+    }
+    buildToolsVersion '27.0.3'
+    compileSdkVersion 27
     defaultConfig {
         applicationId "com.idealcn.gradle.study"
         minSdkVersion 19
-        targetSdkVersion 28
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
+    flavorDimensions "free","charge"
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+
+            debuggable true
+        }
+    }
+    productFlavors {
+        xiaomi {
+            dimension "free"
+        }
+        huawei {
+            dimension "free"
+
+        }
+        minApi21 {
+            dimension "charge"
+            signingConfig signingConfigs.release
+            targetSdkVersion 21
+            versionNameSuffix '.xiaomi'
+            minSdkVersion 19
+            versionCode 1
+            versionName 'xiaomi-1.0-release'
+            applicationIdSuffix ".xiaomi"
+        }
+        minApi23 {
+            dimension "charge"
+            targetSdkVersion 21
+            versionNameSuffix '.huawei'
+            minSdkVersion 19
+            signingConfig signingConfigs.release
+            versionCode 1
+            versionName 'huawei-1.0-release'
+            applicationIdSuffix ".huawei"
+        }
+    }
+
+    sourceSets {
+        main {
+            java.srcDirs = ['src/main/java']
+            res.srcDirs = ['src/main/res']
+            manifest.srcFile  'src/main/AndroidManifest.xml'
+        }
+        huawei {
+            java.srcDirs = ['src/main/java']
+            res.srcDirs = ['src/huawei/res']
+            manifest.srcFile  'src/main/AndroidManifest.xml'
+        }
+        xiaomi {
+            java.srcDirs = ['src/main/java']
+            res.srcDirs = ['src/xiaomi/res']
+            manifest.srcFile  'src/main/AndroidManifest.xml'
+        }
+    }
+
+    compileOptions {
+        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_8
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0-alpha1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
