--- a/version.gradle
+++ b/version.gradle
@@ -1,5 +1,6 @@
 ext {
         minSdkVersion = 19
         targetSdkVersion = 27
-
+        compileSdkVersion = 28
+        supportLibVersion = "28.0.0"
 }
